<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_point"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_point" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_setting" />
</menu>