<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_custom_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/frequency_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/frequency_tx"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/frequency_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:entries="@array/frequency"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/frequency_sub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:entries="@array/day"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/time"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:layout_centerVertical="true"
            android:text="@string/time_tx"
            android:textSize="20dp" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:layout_marginLeft="100dp"
            android:text=":"
            android:textSize="20dp" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#1e90ff"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/setting_btn"/>
</LinearLayout>