<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:dropDownVerticalOffset="45dp"
        android:gravity="center_horizontal"
        android:entries="@array/month"
        android:spinnerMode="dropdown" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <TextView
        android:id="@+id/title_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/content_expenditure"
        android:textColor="@color/chart_blue"/>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="match_parent"
        android:layout_below="@id/title_tx"
        android:layout_height="300dp"
        android:layout_marginVertical="10dp" />
    <View
        android:id="@+id/line1_v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/pie_chart"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/chart_blue"
        />
    <LinearLayout
        android:id="@+id/lineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1_v"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/category_tx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/category_tx"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/budget_tx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/use_tx"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/percentage_tx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/percentage_tx"
            android:layout_marginTop="10dp"
            />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/lineLayout"
            />
        <View
            android:id="@+id/line2_v"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/listView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/chart_blue"
            />

        <TextView
            android:id="@+id/payTotal_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2_v"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/pay_total_tx"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/total_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2_v"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/payTotal_tx"
            android:gravity="end"
            android:text="9700"
            android:textSize="20dp" />

    </RelativeLayout>

    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>