<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:entries="@array/month"
        android:gravity="center_horizontal"
        android:dropDownVerticalOffset="45dp"
        android:spinnerMode="dropdown" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <TextView
        android:id="@+id/title_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/content_budget"
        android:layout_marginTop="10dp"
        android:textColor="@color/chart_blue"/>
        <Button
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_tx"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            app:backgroundTint="#1e90ff"
            android:textSize="20dp"
            android:text="@string/button_edit"
            android:layout_gravity="end"/>
        <View
            android:id="@+id/line1_v"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/edit_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/chart_blue"
            />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/total_char"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/line1_v"
             />
        <View
            android:id="@+id/line2_v"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/total_char"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/chart_blue"
            />
        <TextView
            android:id="@+id/category_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2_v"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/category_tx"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/budget_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2_v"
            android:layout_toRightOf="@id/category_tx"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/budget_tx"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp"
            android:gravity="end"
            android:layout_marginTop="10dp"
            />
        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/category_char"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="300dp"
            android:layout_below="@id/budget_tx"
            android:background="@color/light_gray"
            />
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>