<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_custom_filter_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/frequency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/period"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/date_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:dropDownVerticalOffset="45dp"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="～"
            android:textAlignment="center"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/date_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:dropDownVerticalOffset="45dp"
            android:gravity="center"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/types_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/types_tx"
            android:textSize="20dp" />
        <Spinner
            android:id="@+id/types_sp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="90dp"
            android:dropDownVerticalOffset="45dp"
            android:gravity="center"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dropdown" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/category_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/category"
            android:textSize="20dp" />
        <Spinner
            android:id="@+id/category_sp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:dropDownVerticalOffset="45dp"
            android:gravity="center"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dropdown" />


    </LinearLayout>
    <Button
        android:id="@+id/setting_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:backgroundTint="#1e90ff"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/setting_btn"/>
</LinearLayout>